Testando o git pelo CMD

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Testando :)</h1>
+    <h2> test atualizar o github pelo terminal test</h2>
+    <h3>oooooh</h3>
     
 </body>
 </html>
